--- a/views/index.pug
+++ b/views/index.pug
@@ -4,11 +4,11 @@ block headContent
 	title Home
 	
 block content
-	h1 BTC Explorer
+	h1 SMART Explorer
 	hr
 
 	:markdown-it
-		**BTC Explorer** is [open-source](https://github.com/janoside/btc-rpc-explorer). If you run your own [Bitcoin Full Node](https://bitcoin.org/en/full-node), **BTC Explorer** can easily run alongside it, communicating via RPC calls. See the project [ReadMe](https://github.com/janoside/btc-rpc-explorer) for a list of features and instructions for running.
+		**SMART Explorer** is [open-source](https://github.com/msg768/smart-rpc-explorer). If you run your own [SmartCash Full Node](https://smartcash.cc/wallets), **SMART Explorer** can easily run alongside it, communicating via RPC calls. See the project [ReadMe](https://github.com/msg768/smart-rpc-explorer) for a list of features and instructions for running.
 
 	
 	if (latestBlocks)
@@ -26,10 +26,8 @@ block content
 
 	div(class="text-center")
 		:markdown-it
-			Public instance maintained at [https://btc-explorer.com](https://btc-explorer.com)
-			
-			Donate bitcoin: [3NPGpNyLLmVKCEcuipBs7G4KpQJoJXjDGe](bitcoin:3NPGpNyLLmVKCEcuipBs7G4KpQJoJXjDGe) / zCash: [t1bEGh8eABmZu8Ned3awCgBdkAhz2mKzJxP](zcash:t1bEGh8eABmZu8Ned3awCgBdkAhz2mKzJxP)
+			Donate SmartCash: [SeDV8hHPgeCtLSaeSCbCvPxwHaLf2Whs7b](https://wallet.smartcash.cc/donate/msg768)
 
-			Source code available on github: [https://github.com/janoside/btc-rpc-explorer](https://github.com/janoside/btc-rpc-explorer)
+			Source code available on github: [https://github.com/msg768/smart-rpc-explorer](https://github.com/msg768/smart-rpc-explorer)
 			
-			&copy; 2017 Dan Janosik
+			&copy; 2018 Markus GH
