--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,7 +15,7 @@ html
 		link(rel="icon", type="image/png", sizes="16x16", href="/img/favicons/favicon-16x16.png")
 
 		block headContent
-			title BTC Explorer
+			title SMART Explorer
 		
 	body
 		nav(class="navbar navbar-expand-lg navbar-dark bg-dark mb-4")
@@ -23,7 +23,7 @@ html
 				a(class="navbar-brand", href="/")
 					span
 						img(src="/img/logo/logo-64.png", class="header-image")
-						span BTC Explorer
+						span SMART Explorer
 						
 				button(type="button", class="navbar-toggler navbar-toggler-right", data-toggle="collapse", data-target="#navbarNav")
 					span(class="navbar-toggler-icon")
@@ -54,7 +54,7 @@ html
 			div(style="margin-bottom: 30px;")
 
 		div(class="d-none d-md-block")
-			a(href="https://github.com/janoside/btc-rpc-explorer")
+			a(href="https://github.com/msg768/smart-rpc-explorer")
 				img(style="position: absolute; top: 0; left: 0; border: 0;", src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67", alt="Fork me on GitHub", data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png")
 		
 		script(src="https://code.jquery.com/jquery-3.2.1.min.js", integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=", crossorigin="anonymous")
