--- a/views/transaction.pug
+++ b/views/transaction.pug
@@ -43,7 +43,7 @@ block content
 				div(class="alert alert-warning", style="padding-bottom: 0;")
 					h4(class="alert-heading h5") This transaction doesn't really exist!
 					:markdown-it
-						This is the coinbase transaction of the [Bitcoin Genesis Block](/block/000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f). For more background about this special-case transaction, you can read [this brief discussion](https://github.com/bitcoin/bitcoin/issues/3303) among some of the [Bitcoin Core](https://bitcoin.org) developers.
+						This is the coinbase transaction of the [SmartCash Genesis Block](/block/000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f). For more background about this special-case transaction, you can read [this brief discussion](https://github.com/bitcoin/bitcoin/issues/3303) among some of the [SmartCash Core](https://bitcoin.org) developers.
 
 			table(class="table")
 				tr
@@ -162,7 +162,7 @@ block content
 											th 1
 											td
 												span(class="tag monospace") coinbase
-												span(class="monospace") Newly minted BTC
+												span(class="monospace") Newly minted SMART
 											td(class="monospace") #{utils.getBlockReward(result.getblock.height)}
 
 									each txInput, txInputIndex in result.txInputs
