--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block content
 	hr
 
 	:markdown-it
-		**SMART Explorer** is [open-source](https://github.com/msg768/smart-rpc-explorer). If you run your own [SmartCash Full Node](https://bitcoin.org/en/full-node), **SMART Explorer** can easily run alongside it, communicating via RPC calls. See the project [ReadMe](https://github.com/msg768/smart-rpc-explorer) for a list of features and instructions for running.
+		**SMART Explorer** is [open-source](https://github.com/msg768/smart-rpc-explorer). If you run your own [SmartCash Full Node](https://smartcash.cc/wallets), **SMART Explorer** can easily run alongside it, communicating via RPC calls. See the project [ReadMe](https://github.com/msg768/smart-rpc-explorer) for a list of features and instructions for running.
 
 	
 	if (latestBlocks)
