--- a/public/css/styling.css
+++ b/public/css/styling.css
@@ -28,6 +28,10 @@ thead {
 	background-color: #ffbd42!important;
 }
 
+.table td, .table th {
+	border-top: 1px solid #af7608;
+}
+
 img.header-image {
 	margin-top: -10px;
 	margin-bottom: -5px;
