--- a/public/css/styling.css
+++ b/public/css/styling.css
@@ -1,6 +1,6 @@
 body {
 	font: 14px 'Open Sans', "Lucida Grande", Helvetica, Arial, sans-serif;
-	background-color: #f7e4c4;
+	background-color: #ffe4b4;
 }
 
 code {
