--- a/views/block-height.pug
+++ b/views/block-height.pug
@@ -4,8 +4,7 @@ block headContent
 	title Block #{blockHeight}
 
 block content
-	h1(class="h2") Block 
-		small(class="monospace") ##{blockHeight.toLocaleString()}
+	h1(class="h2") Block #{blockHeight.toLocaleString()}
 	hr
 
 	include includes/block-content.pug
