SMART to SmartCash

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,11 +4,11 @@ block headContent
 	title Home
 	
 block content
-	h1 SMART Explorer
+	h1 SmartCash Explorer
 	hr
 
 	:markdown-it
-		**SMART Explorer** is [open-source](https://github.com/msg768/smart-rpc-explorer). If you run your own [SmartCash Full Node](https://smartcash.cc/wallets), **SMART Explorer** can easily run alongside it, communicating via RPC calls. See the project [ReadMe](https://github.com/msg768/smart-rpc-explorer) for a list of features and instructions for running.
+		**SmartCash Explorer** is [open-source](https://github.com/msg768/smart-rpc-explorer). If you run your own [SmartCash Full Node](https://smartcash.cc/wallets), **SmartCash Explorer** can easily run alongside it, communicating via RPC calls. See the project [ReadMe](https://github.com/msg768/smart-rpc-explorer) for a list of features and instructions for running.
 
 	
 	if (latestBlocks)
