--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,7 +15,7 @@ html
 		link(rel="icon", type="image/png", sizes="16x16", href="/img/favicons/favicon-16x16.png")
 
 		block headContent
-			title SMART Explorer
+			title SmartCash Explorer
 		
 	body
 		nav(class="navbar navbar-expand-lg navbar-light bg-dark mb-4")
@@ -23,7 +23,7 @@ html
 				a(class="navbar-brand", href="/")
 					span
 						img(src="/img/logo/logo-64.png", class="header-image")
-						span SMART Explorer
+						span SmartCash Explorer
 						
 				button(type="button", class="navbar-toggler navbar-toggler-right", data-toggle="collapse", data-target="#navbarNav")
 					span(class="navbar-toggler-icon")
