--- a/views/transaction.pug
+++ b/views/transaction.pug
@@ -162,7 +162,7 @@ block content
 											th 1
 											td
 												span(class="tag monospace") coinbase
-												span(class="monospace") Newly minted SMART
+												span(class="monospace") Newly minted SmartCash
 											td(class="monospace") #{utils.getBlockReward(result.getblock.height)}
 
 									each txInput, txInputIndex in result.txInputs
