--- a/views/transaction.pug
+++ b/views/transaction.pug
@@ -115,7 +115,7 @@ block content
 				if (result.getrawtransaction.vin[0].coinbase)
 					tr
 						th(class="table-active properties-header") Total Network Fees
-						td(class="monospace") #{new Decimal(totalOutputValue).minus(totalInputValue)}
+						td(class="monospace") Σ #{new Decimal(totalOutputValue).minus(totalInputValue)}
 				else
 					tr
 						th(class="table-active properties-header") Network Fee Paid
@@ -131,11 +131,11 @@ block content
 						h2(class="h5 mb-0") Coinbase
 					div(class="card-body")
 						h6 Hex
-						div(style="background-color: #f5eee2; padding: 5px 10px;", class="mb-3")
+						div(style="background-color: #f0f0f0; padding: 5px 10px;", class="mb-3")
 							span(class="monospace word-wrap") #{result.getrawtransaction.vin[0].coinbase}
 
 						h6 Decoded
-						div(style="background-color: #f5eee2; padding: 5px 10px;", class="mb-3")
+						div(style="background-color: #f0f0f0; padding: 5px 10px;", class="mb-3")
 							span(class="monospace word-wrap") #{utils.hex2ascii(result.getrawtransaction.vin[0].coinbase)}
 
 			div(class="card mb-3")
@@ -162,8 +162,8 @@ block content
 											th 1
 											td
 												span(class="tag monospace") coinbase
-												span(class="monospace") Newly minted SmartCash
-											td(class="monospace") #{utils.getBlockReward(result.getblock.height)}
+												span(class="monospace") Newly minted SMART
+											td(class="monospace") Σ #{utils.getBlockReward(result.getblock.height)}
 
 									each txInput, txInputIndex in result.txInputs
 										if (txInput)
@@ -188,7 +188,7 @@ block content
 										td
 										td
 										td
-											strong(class="monospace") #{totalInputValue}
+											strong(class="monospace") Σ #{totalInputValue}
 								
 
 						div(class="col-md-6")
@@ -217,13 +217,13 @@ block content
 														span(class="monospace") OP_RETURN: 
 														span(class="monospace text-muted") #{utils.hex2ascii(vout.scriptPubKey.asm.substring("OP_RETURN ".length))}
 											td
-												span(class="monospace") #{vout.value}
+												span(class="monospace") Σ #{vout.value}
 
 									tr
 										td
 										td
 										td
-											strong(class="monospace") #{totalOutputValue}
+											strong(class="monospace") Σ #{totalOutputValue}
 
 		div(id="tab-scripts", class="tab-pane", role="tabpanel")
 			h3 Input Scripts
