--- a/public/css/styling.css
+++ b/public/css/styling.css
@@ -146,8 +146,10 @@ code, .monospace {
 	background-color: #f3c97e!important;
 }
 
-.pagination-lg .page-link:hover {
-	background-color: white;
+.page-link:hover {
+        background-color: #f9b63b!important;
+	box-shadow: 0px 1px 1px #f5b43e inset, 1px 1px 2px #f5b43e!important;
+	border-color: #a76f0b!important;
 }
 
 .page-item.active .page-link {
