--- a/views/block.pug
+++ b/views/block.pug
@@ -4,8 +4,7 @@ block headContent
 	title Block #{blockHash}
 
 block content
-	h1(class="h2") Block 
-		small(style="width: 100%;", class="monospace") ##{result.getblock.height.toLocaleString()}
+	h1(class="h2") Block #{result.getblock.height.toLocaleString()}
 	hr
 
 	include includes/block-content.pug
