--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block content
 	hr
 
 	:markdown-it
-		**SmartCash Explorer** is [open-source](https://github.com/msg768/smart-rpc-explorer). If you run your own [SmartCash Full Node](https://smartcash.cc/wallets), **SmartCash Explorer** can easily run alongside it, communicating via RPC calls. See the project [ReadMe](https://github.com/msg768/smart-rpc-explorer) for a list of features and instructions for running.
+		**SmartCash Explorer** is [open-source](https://github.com/smartcash/rpc-explorer). If you run your own [SmartCash Full Node](https://smartcash.cc/wallets), **SmartCash Explorer** can easily run alongside it, communicating via RPC calls. See the project [ReadMe](https://github.com/smartcash/rpc-explorer) for a list of features and instructions for running.
 
 	
 	if (latestBlocks)
@@ -26,8 +26,6 @@ block content
 
 	div(class="text-center")
 		:markdown-it
-			Donate SmartCash: [SeDV8hHPgeCtLSaeSCbCvPxwHaLf2Whs7b](https://wallet.smartcash.cc/donate/msg768)
-
-			Source code available on github: [https://github.com/msg768/smart-rpc-explorer](https://github.com/msg768/smart-rpc-explorer)
+			Source code available on github: [https://github.com/smartcash/rpc-explorer](https://github.com/smartcash/rpc-explorer)
 			
-			&copy; 2018 Markus GH
+			[&copy; 2018 www.smartcash.cc](https://smartcash.cc/)
