--- a/views/block.pug
+++ b/views/block.pug
@@ -4,7 +4,9 @@ block headContent
 	title Block #{blockHash}
 
 block content
-	h1(class="h2") Block #{result.getblock.height.toLocaleString()}
+	h1(class="h2") Block
+		br
+		small(class="monospace") #{result.getblock.hash}
 	hr
 
 	include includes/block-content.pug
