--- a/views/node-info.pug
+++ b/views/node-info.pug
@@ -47,4 +47,8 @@ block content
 								if (fraction >= 1)
 									- scaleDone = true;
 									span(class="text-muted")  (#{fraction} #{item.name})
-										
+				tr
+					th(class="table-active properties-header") SmartNodes
+					td
+						a(href="https://smartcash.bitcoiner.me/smartnodes/worldmap/")
+							img(src="https://smartcash.bitcoiner.me/smartnodes/worldmap/map.php")
