--- a/views/includes/block-content.pug
+++ b/views/includes/block-content.pug
@@ -8,12 +8,6 @@ ul(class='nav nav-tabs mb-3')
 
 div(class="tab-content")
 	div(id="tab-summary", class="tab-pane active", role="tabpanel")
-		if (result.getblock.hash == "000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f")
-			div(class="alert alert-success", style="padding-bottom: 0;")
-				h4(class="alert-heading h5") This is the SmartCash Genesis Block!
-				:markdown-it
-					This is the first block in the SmartCash blockchain. This block was mined by SmartCash's anonymous/pseudonymous creator Satoshi Nakamoto. If you're interested, you can [read more about the genesis block](https://en.bitcoin.it/wiki/Genesis_block).
-		
 		table(class="table")
 			tr
 				th(class="table-active properties-header") Block Hash
@@ -25,10 +19,6 @@ div(class="tab-content")
 				td(class="monospace")
 					if (result.getblock.previousblockhash)
 						a(href=("/block/" + result.getblock.previousblockhash)) #{result.getblock.previousblockhash}
-
-					else if (result.getblock.hash == "000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f")
-						span N/A - This is the 
-						a(href="https://en.bitcoin.it/wiki/Genesis_block") SmartCash Genesis Block
 
 			tr
 				th(class="table-active properties-header") Next Block Hash
@@ -156,7 +146,7 @@ div(class="tab-content")
 
 													td
 														if (vout.scriptPubKey && vout.scriptPubKey.addresses)
-															span(class="monospace") #{vout.scriptPubKey.addresses[0]}
+															a(class="monospace", href="../address/" + vout.scriptPubKey.addresses[0]) #{vout.scriptPubKey.addresses[0]}
 															br
 															span(class="monospace text-muted") via tx 
 															a(href=("/tx/" + txInput.txid + "#output-" + tx.vin[txInputIndex].vout), class="monospace") #{txInput.txid.substring(0, 14)}..., Output ##{tx.vin[txInputIndex].vout + 1}
@@ -198,7 +188,7 @@ div(class="tab-content")
 													if (vout.scriptPubKey)
 														if (vout.scriptPubKey.addresses)
 															a(id="output-" + voutIndex)
-																span(class="monospace") #{vout.scriptPubKey.addresses[0]}
+																a(class="monospace", href="../address/" + vout.scriptPubKey.addresses[0]) #{vout.scriptPubKey.addresses[0]}
 
 														else if (vout.scriptPubKey.hex && vout.scriptPubKey.hex.startsWith('6a24aa21a9ed'))
 															span(class="monospace") Segregated Witness committment - 
