--- a/views/includes/block-content.pug
+++ b/views/includes/block-content.pug
@@ -146,7 +146,7 @@ div(class="tab-content")
 
 													td
 														if (vout.scriptPubKey && vout.scriptPubKey.addresses)
-															a(class="monospace", href="../address/" + vout.scriptPubKey.addresses[0]) #{vout.scriptPubKey.addresses[0]}
+															span(class="monospace") #{vout.scriptPubKey.addresses[0]}
 															br
 															span(class="monospace text-muted") via tx 
 															a(href=("/tx/" + txInput.txid + "#output-" + tx.vin[txInputIndex].vout), class="monospace") #{txInput.txid.substring(0, 14)}..., Output ##{tx.vin[txInputIndex].vout + 1}
@@ -188,7 +188,7 @@ div(class="tab-content")
 													if (vout.scriptPubKey)
 														if (vout.scriptPubKey.addresses)
 															a(id="output-" + voutIndex)
-																a(class="monospace", href="../address/" + vout.scriptPubKey.addresses[0]) #{vout.scriptPubKey.addresses[0]}
+																span(class="monospace") #{vout.scriptPubKey.addresses[0]}
 
 														else if (vout.scriptPubKey.hex && vout.scriptPubKey.hex.startsWith('6a24aa21a9ed'))
 															span(class="monospace") Segregated Witness committment - 
