--- a/views/transaction.pug
+++ b/views/transaction.pug
@@ -73,15 +73,6 @@ block content
 					th(class="table-active properties-header") Version
 					td(class="monospace") #{result.getrawtransaction.version}
 				
-				tr
-					th(class="table-active properties-header") Size
-					td(class="monospace")
-						span #{result.getrawtransaction.size.toLocaleString()} bytes
-						if (result.getrawtransaction.vsize != result.getrawtransaction.size)
-							span  (
-							a(href="https://github.com/bitcoin/bips/blob/master/bip-0141.mediawiki#Transaction_size_calculations") virtual size
-							span : #{result.getrawtransaction.vsize.toLocaleString()} bytes)
-				
 				if (result.getrawtransaction.locktime > 0)
 					tr
 						th(class="table-active properties-header")
@@ -121,9 +112,9 @@ block content
 						th(class="table-active properties-header") Network Fee Paid
 						td(class="monospace")
 							strong #{new Decimal(totalInputValue).minus(totalOutputValue)}
-							span(class="text-muted")  (#{totalInputValue} - #{totalOutputValue})
-							br
-							span ~#{new DecimalRounded(totalInputValue).minus(totalOutputValue).dividedBy(result.getrawtransaction.size).times(100000000)} sat/B
+							//span(class="text-muted")  (#{totalInputValue} - #{totalOutputValue})
+							//br
+							//span ~#{new DecimalRounded(totalInputValue).minus(totalOutputValue).dividedBy(result.getrawtransaction.size).times(100000000)} sat/B
 
 			if (result.getrawtransaction.vin[0].coinbase)
 				div(class="card mb-3")
