--- a/views/includes/block-content.pug
+++ b/views/includes/block-content.pug
@@ -46,8 +46,9 @@ div(class="tab-content")
 				th(class="table-active properties-header") Size
 				td(class="monospace")
 					span #{result.getblock.size.toLocaleString()} bytes
-					br
-					span(class="text-muted") (weight: #{result.getblock.weight.toLocaleString()})
+					if (result.getblock.weight)
+						br
+						span(class="text-muted") (weight: #{result.getblock.weight.toLocaleString()})
 
 			tr
 				th(class="table-active properties-header") Confirmations
